--- a/app/static/index.html
+++ b/app/static/index.html
@@ -7,11 +7,13 @@
   <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css'>
   <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css'>
   <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.css' />
+  <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/css/select2.min.css'>
   <link rel='stylesheet' href='/static/css/main.css' />
   <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js'></script>
   <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js'></script>
   <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js'></script>
   <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.0/fullcalendar.min.js'></script>
+  <script src='//cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/js/select2.min.js'></script>
   <script type='text/javascript' src='/static/js/uploader.js' ></script>
   <script type='text/javascript' src='/static/js/calendar.js'></script>
   <script type='text/javascript' src='/static/js/load.js' ></script>
